# liveproof

./: .env.example  .gitignore  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  ETHICS.md  LICENSE  README.md  RELEASE_MANIFEST.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
corpus/: README.md  deepseek_v4_pro_rc_study_8x3_20260525T064933Z.md  deepseek_v4_pro_rc_study_8x3_20260525T064933Z.results.jsonl  deepseek_v4_pro_v2_extreme_80_20260525T191654Z.md  deepseek_v4_pro_v2_extreme_80_20260525T191654Z.results.jsonl  foundry_20260525T201430Z_nvidia.md  foundry_20260525T201430Z_nvidia.results.jsonl  foundry_20260525T201430Z_public.jsonl  foundry_20260525T201915Z_nvidia.md  foundry_20260525T201915Z_nvidia.results.jsonl  foundry_20260525T201915Z_public.jsonl  rc_v1_easy_public.jsonl  rc_v1_hard_public.jsonl  rc_v1_medium_public.jsonl  rc_v1_study_8x2x3_20260525T063550Z.md  rc_v1_study_8x2x3_20260525T063550Z.results.jsonl  v2_extreme_public.jsonl
docs/: autonomous_execution_roadmap.md  autonomous_operating_constitution.md  autonomous_research_institute_plan.md  deepseek_v4_pro_study.md  frontier_v2.md  github_release.md  governance.md  ladder_protocol.md  ladder_study.md  preprint.md  publication_plan.md  release_candidate.md  research_foundry.md  technical_note.md
launch/: announcement.md  hackernews.md
ops/: research-foundry.service  research-foundry.timer
paper/: README_arxiv.md  arxiv_metadata.md  main.tex
scripts/: ci_hygiene.sh  package_arxiv.sh  reproduce_ladder.sh  research_foundry.py
tests/: test_liveproof.py
(+16 files in other folders)
