[project]
name = "liveproof"
version = "0.1.0"
description = "Post-training, contamination-resistant, verifier-backed AI evaluation protocol."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
]

[project.scripts]
liveproof = "liveproof.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
